download/v1.7.7/安装指南.md
# 初始音乐桥 · BetterNCM 插件路线 安装指南（v1.3.0）

本交付包含三件东西：

| 文件 | 说明 |
|------|------|
| `ChuShi-MusicBridge-1.3.0.plugin` | **插件官方安装包（推荐）**——放入 BetterNCM 的 `plugins` 文件夹即可，由 BetterNCM 自动解压安装，与插件商店装的插件完全同构 |
| `初始音乐桥-插件-1.3.0.zip` | 插件文件夹版（开发者路线，放入 `plugins_dev`，支持改文件热重载） |
| `betterncm_installer.exe` | BetterNCM 官方一键安装器（BetterNCM-Installer 1.2.0，来自 std-microblock/BetterNCM-Installer 官方 Release，SHA-256 f4aabe8f…） |

> 两个插件包内容完全一致（manifest.json / index.js / bridge.dll），只是安装方式不同，**二选一**。

## v1.3.0 修了什么（为什么之前控制不了网易云）

- **根因**：bridge.dll 1.2.0 及之前把「初始」发来的控制命令文件误写到了
  `chushi-music\` 根目录（少拼 `\cmd` 子目录），而插件脚本只轮询
  `chushi-music\cmd\` 子目录——命令永远不被网易云执行，接口却返回成功。
  表现就是：面板显示正常/诊断全绿，但点播放/暂停/切歌**没有任何效果**。
- 1.3.0 修正落盘路径；插件侧同时兼容扫描根目录残留并在启动时清扫
  （就算暂时不换新 DLL，旧包配合新 JS 也能控）；
- 控制命令执行后 420ms 校验实际效果，未生效时直接驱动媒体元素兜底；
- state.json 增加 5 秒强制心跳：暂停时也保底刷新，`/api/debug` 的
  `stateAgeMs` 恒小于 5 秒 = 桥存活的可靠信号（1.2.x 暂停时 stateAgeMs
  会一直增大，属已知现象，不再误导排障）。

**从 1.2.0 升级**：删除 `C:\betterncm\plugins\ChuShi-MusicBridge-1.2.0.plugin`
→ 放入本版 1.3.0 的 `.plugin` → 完全退出并重启网易云音乐。

## 关于 .plugin 与 .plugin.path.meta（你可能想问的）

- **`.plugin` 文件**就是插件安装包：本质是 zip，`manifest.json` 必须在包的根部。
  BetterNCM 只认 `plugins` 文件夹里 **`.plugin` 后缀**的包，`.zip` 后缀放进去会被**直接忽略**——
  这就是之前装不上的原因。
- 安装后**不需要手动创建任何东西**：网易云启动时，BetterNCM 自动把 `.plugin`
  解压到 `C:\betterncm\plugins_runtime\cc.chushi.musicbridge\`，并在里面**自动生成**
  `.plugin.path.meta`（内容是来源 `.plugin` 包的相对路径，供插件商店跟踪更新用）。
  这两个产物都是 BetterNCM 自己生成的——**手动安装看不到它们 ≠ 异常**；
  只要 `plugins_runtime\cc.chushi.musicbridge\` 出现了就是装好了。
- `plugins_runtime` 每次启动都按 `plugins` 里的 `.plugin` 全量重建，别手动往里放文件（会被清掉）。

## 第一步：安装 BetterNCM 插件管理器

1. **完全退出**网易云音乐（含托盘图标）；
2. 双击 `betterncm_installer.exe`。若 Windows SmartScreen 弹窗，点
   「更多信息 → 仍要运行」；建议右键 →「以管理员身份运行」；
3. 按界面提示安装（会自动下载并注入 BetterNCMII 运行时，需要联网）；
4. 重启网易云音乐：左侧出现「插件管理」即成功；同时 `C:\betterncm`
   数据目录会被创建。

**安装器失败排查**（「安装不成功」先查这里）：
- 网易云音乐必须是**官网安装的桌面版**；微软商店（MSIX）版不支持注入；
- 安装/首次启动前先彻底退出网易云（任务管理器结束 `cloudmusic` 全部进程）；
- 安装器需要联网从 GitHub 下载运行时，国内网络失败就多试几次或换网络/代理；
- 杀毒软件可能拦截注入，临时放行或退出杀软再试；
- 若网易云重启后完全起不来或界面空白：BetterNCM 框架（1.3.4，2024-10）
  与你的网易云内核不兼容——这是框架边界，请改用文末的独立版路线。

## 第二步：安装「初始音乐桥」插件（二选一）

### 路线 A：.plugin 包安装（推荐，与插件商店同构）

1. 打开 `C:\betterncm\plugins\` 文件夹（不存在就新建，注意英文小写；
   文件管理器地址栏直接粘贴 `C:\betterncm\plugins` 回车即可）；
2. 把 `ChuShi-MusicBridge-1.3.0.plugin` **整个文件**复制进去
   （不要解压、不要改名、不要套一层文件夹）；
3. 完全退出并重启网易云音乐；
4. 确认安装成功：`C:\betterncm\plugins_runtime\cc.chushi.musicbridge\`
   文件夹自动出现，内含自动生成的 `.plugin.path.meta`、`manifest.json`、
   `index.js`、`bridge.dll`。

### 路线 B：文件夹安装（开发者方式）

1. 解压 `初始音乐桥-插件-1.3.0.zip`，得到「初始音乐桥」文件夹；
2. 把整个文件夹放进 `C:\betterncm\plugins_dev\`（不存在就新建），最终结构：
   ```
   C:\betterncm\plugins_dev\初始音乐桥\
     ├─ manifest.json
     ├─ index.js
     ├─ bridge.dll
     └─ 安装说明.txt
   ```
3. 完全退出并重启网易云音乐。

### 装好后

- 打开「初始」起始页 → 底部 Dock「音乐」面板 → 自动连接，
  显示歌曲后即可播放/暂停/切歌/拖进度/调音量；
- 面板右下角新增**「诊断」**入口：点开即见桥版本/三源状态/状态文件年龄，
  「复制诊断」一键把 `/api/debug` JSON 复制到剪贴板，出问题时直接粘贴反馈；
- 若网易云里能看到插件管理界面，列表中应出现「初始音乐桥」。

## 自检与排障

- 浏览器打开 `http://127.0.0.1:10754/api/debug`：
  - 有输出 = bridge.dll 服务正常；`version` 应为 **1.3.0**（还是 1.2.0 =
    旧 .plugin 没删干净或没重启网易云）；
  - `stateFile:false` = 插件 JS 没注入成功；
  - `stateAgeMs` 恒大于 5000 = 插件 JS 写盘环异常（1.3.0 起有 5s 心跳，
    正常时恒小于 5000）；
  - `diag` 段显示页内三源（storeReady / eventsHooked / media）与页面地址；
- 网易云内按 F12（BetterNCM 自带 DevTools），Console 过滤
  `[ChuShiMusicBridge]`：正常应看到「加载中 v1.3.0…」「桥接就绪 v1.3.0」；
- 插件管理列表里看不到插件：
  - 路线 A：确认 `.plugin` 在 `C:\betterncm\plugins\` 下、后缀没变
    （Windows 默认隐藏已知后缀，注意别变成 `xxx.plugin.zip`）；
  - 路线 B：确认最终路径是 `plugins_dev\初始音乐桥\manifest.json`；
  - 若 `C:\betterncm` 目录本身不存在 → BetterNCM 本体没装成功，回到第一步；
- 详细 FAQ 见插件包内「安装说明.txt」。

## 已知边界（请先了解）

BetterNCM 框架最后一次适配发布（1.3.4）在 2024-10，未跟进网易云之后的新内核。
若安装管理器/插件后**网易云无法启动、或插件管理界面空白**，多为内核不兼容——
这不是插件的问题，而是框架的边界。此时请改用独立版路线（不依赖任何框架）：

- 「初始」Release 页 → `ChuShiBridge-2.0.0-Setup.zip`（当前内含桥接器 2.0.4）
- 解压后双击「安装初始音乐桥.bat」即可，网易云运行中也可直接装。

两条路线接口完全一致（同端口同 API），「初始」侧无需任何改动。
